cmake_minimum_required(VERSION 3.10)  # Minimum version of CMake required

# Set the project name and version
project(RayTracer VERSION 1.0)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add executabcmake_minimum_required(VERSION 3.10)  # Minimum version of CMake required

# Set the project name and version
project(RayTracer VERSION 1.0)

# Specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add executable
add_executable(RayTracer main.cpp)
add_executable(RayTracer main.cpp)